src/objects/Slack_App__mdt.object
<CustomObject>
    <fields>
        <fullName>App_Id__c</fullName>
        <label>App Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bot_Token__c</fullName>
        <label>Bot Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bot_User_Id__c</fullName>
        <label>Bot User Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Id__c</fullName>
        <label>Client Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Secret__c</fullName>
        <label>Client Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signing_Secret__c</fullName>
        <label>Signing Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Verification_Token__c</fullName>
        <label>Verification Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Slack App</label>
    <pluralLabel>Slack Apps</pluralLabel>
</CustomObject>